manifests/uptime-kuma/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    # This example is for nginx, if you are using something else, you need to change this file
    kubernetes.io/ingress.class: traefik-external
spec:
  rules:
    # Edit this to a domain you control
    - host: monitor.local.abdevlab.xyz
      http:
        paths:
          - backend:
              service:
                name: uptime-kuma
                port:
                  number: 80
            path: /
            pathType: Prefix
    tls:
      secretName: local-abdevlab-xyz-tls
